# Rust-Chat-Client

./: Cargo.toml  README.md
src/: helper.rs  main.rs  types.rs
src/UI/: app.rs  event.rs  input_history.rs  mod.rs  user_interface.rs
src/UI/tabs/: chat.rs  help.rs  mod.rs  tabs.rs  users.rs
src/chat/: chat_client.rs  chat_service.rs  mod.rs  service.rs
src/network/: client.rs  http.rs  http_client.rs  web_rtc.rs
src/plugins/: mod.rs  plugin_registry.rs  plugins.rs
src/service/: user_service.rs
