[package]
name = "ChatClient"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_urlencoded = "0.7.1"
rand = "0.9.2"
base64 = "0.22.1"
async-trait = "0.1.89"
thiserror = "2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
tui-textarea = { version = "*", features = ["search"] }
